# Hu2En_open-translation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  translation_correction.yml
.github/scripts/: validate_subtitles.py
.github/workflows/: validate.yml
src/vidtrans/: __init__.py  audio.py  formats.py  pipeline.py  transcribe.py  translate.py
subtitles/: HU_PM_election_transition_2026-05-09.en.srt  HU_PM_election_transition_2026-05-09.json  README.md
